updated configs